--- a/package.json
+++ b/package.json
@@ -1,11 +1,14 @@
 {
     "name": "Selvania-Launcher",
+    "preductname": "Selvania Launcher",
     "version": "1.0.0",
     "description": "Launcher Mincraft custom (crack, premium)",
     "main": "src/app.js",
     "author": "Luuxis",
     "url": "http://launcher.selvania.fr",
-    "engines": { "node": "16.x.x" },
+    "engines": {
+        "node": "16.x.x"
+    },
     "scripts": {
         "start": "electron .",
         "obf": "node src/assets/js/utils/obfuscate.js --obf=true",
@@ -13,8 +16,14 @@
     },
     "license": "CC0",
     "nodemonConfig": {
-        "ignore": ["app/*"],
+        "ignore": [
+            "app/*"
+        ],
         "ext": "js,html,css"
+    },
+    "dependencies": {
+        "minecraft-java-core": "^2.0.0",
+        "node-fetch": "^2.6.7"
     },
     "devDependencies": {
         "electron": "^19.0.4",
@@ -24,8 +33,5 @@
     "repository": {
         "type": "git",
         "url": "git+https://github.com/luuxis/Selvania-Launcher.git"
-    },
-    "dependencies": {
-        "node-fetch": "^2.6.7"
     }
 }
