--- a/package.json
+++ b/package.json
@@ -10,24 +10,64 @@
         "node": "16.x.x"
     },
     "scripts": {
-        "start": "electron .",
+        "start": "env-cmd electron .",
+        "build": "electron-builder build",
+        "build:win": "npm run build -- -w",
+        "build:mac": "npm run build -- -m",
+        "build:linux": "npm run build -- -l",
         "obf": "node src/assets/js/utils/obfuscate.js --obf=true",
         "dev": "nodemon --exec npm start"
     },
     "license": "CC0",
     "nodemonConfig": {
-        "ignore": [
-            "app/*"
-        ],
+        "ignore": ["app/*"],
         "ext": "js,html,css"
     },
+    "build": {
+        "appId": "Selvania-Launcher",
+        "productName": "Selvania-Launcher",
+        "artifactName": "${productName}-setup-${version}.${ext}",
+        "files": [],
+        "directories": {
+            "output": "dist"
+        },
+        "asar": true,
+        "win": {
+            "icon": "src/assets/images/icon.ico",
+            "target": [{
+                "target": "nsis",
+                "arch": ["x64"]
+            }]
+        },
+        "mac": {
+            "icon": "src/assets/images/icon.icns",
+            "category": "public.app-category.games",
+            "target": [{
+                "target": "dmg",
+                "arch": [
+                    "x64",
+                    "arm64"
+                ]
+            }]
+        },
+        "linux": {
+            "icon": "src/assets/images/icon.png",
+            "target": [{
+                "target": "AppImage",
+                "arch": ["x64"]
+            }]
+        }
+    },
     "dependencies": {
+        "asar": "^3.1.0",
         "minecraft-java-core": "^2.0.0",
         "node-fetch": "^2.6.7"
     },
     "devDependencies": {
         "electron": "^19.0.4",
         "electron-builder": "^23.0.3",
+        "env-cmd": "^10.1.0",
+        "javascript-obfuscator": "^4.0.0",
         "nodemon": "^2.0.16"
     },
     "repository": {
