--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-    "name": "FKZ-RP",
-    "preductname": "FKZ-RP",
-    "version": "1.0.4",
+    "name": "LostFarkön RP",
+    "preductname": "LostFarkön RP",
+    "version": "1.0.5",
     "description": "Launcher Mincraft custom (crack, premium)",
     "main": "src/app.js",
     "author": "Luuxis, Kirua",
