--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-    "name": "LostFarkön RP",
-    "preductname": "LostFarkön RP",
+    "name": "FKZ-RP",
+    "preductname": "FKZ-RP",
     "version": "1.0.5",
     "description": "Launcher Mincraft custom (crack, premium)",
     "main": "src/app.js",
