--- a/package.json
+++ b/package.json
@@ -1,20 +1,17 @@
 {
     "name": "FKZ-RP",
     "preductname": "FKZ-RP",
-    "version": "1.1.15",
+    "version": "1.1.16",
     "description": "Launcher Mincraft custom (crack, premium)",
     "main": "src/app.js",
-    "author": "Luuxis, Kirua",
+    "author": "Luuxis, Kova",
     "url": "https://httpd.crevoisier.freeddns.org/",
     "engines": {
-        "node": "16.x.x"
+        "node": "^18.x.x"
     },
     "scripts": {
-        "start": "env-cmd electron .",
-        "build": "node build.js",   
-        "build:win": "npm run build -- WINDOWS",
-        "build:mac": "npm run build -- MAC",
-        "build:linux": "npm run build -- LINUX",
+        "start": "cross-env-shell NODE_ENV=dev electron .",
+        "build": "node build.js --obf=true",
         "dev": "nodemon --exec npm start"
     },
     "license": "CC0",
@@ -23,14 +20,14 @@
     },
     "dependencies": {
         "electron-updater": "^5.0.1",
-        "minecraft-java-core": "^2.0.0",
+        "minecraft-java-core": "^3.4.3",
         "node-fetch": "^2.6.7"
     },
     "devDependencies": {
-        "electron": "^19.0.4",
+        "cross-env": "^7.0.3",
+        "electron": "^20.0.0",
         "electron-builder": "^23.0.3",
-        "env-cmd": "^10.1.0",
-        "javascript-obfuscator": "^4.0.0",
+        "javascript-obfuscator": "^4.0.2",
         "nodemon": "^2.0.16"
     },
     "repository": {
